# delivery_gps_tracking

./: package-lock.json  package.json
backend/: .env  Cargo.toml
backend/src/: database.rs  handlers.rs  main.rs  models.rs
frontend/: .env  package-lock.json  package.json
frontend/src/app/: index.tsx  page.tsx
frontend/src/app/components/: map.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/users/: page.tsx
frontend/src/app/dashboard/users/[id]/: page.tsx
frontend/src/app/dashboard/users/add/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/providers/: map-provider.tsx
frontend/src/app/ui/dashboard/: dashboard.module.css
frontend/src/app/ui/dashboard/active/: active.tsx
frontend/src/app/ui/dashboard/navbar/: navbar.module.css  navbar.tsx
frontend/src/app/ui/dashboard/offline/: offline.tsx
frontend/src/app/ui/dashboard/search/: search.tsx
frontend/src/app/ui/dashboard/sidebar/: sidebar.module.css  sidebar.tsx
frontend/src/app/ui/dashboard/sidebar/menuLink/: menuLink.module.css  menuLink.tsx
frontend/src/app/ui/dashboard/standby/: standby.module.css  standby.tsx
frontend/src/app/ui/dashboard/users/: users.module.css
frontend/src/app/ui/dashboard/users/addUser/: addUser.module.css
frontend/src/app/ui/dashboard/users/viewUser/: viewUser.module.css
frontend/src/app/ui/login/: login.module.css
ios/: Podfile
ios/mobile.xcodeproj/: project.pbxproj
