[package]
name = "delivery_gps_tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
postgres = "0.19.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tokio-postgres = "0.7.11"
uuid = { version = "1.10.0", features = ["v4"] }
